Sat Mar  3 17:43:42 2001  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-{scan,mktmpl,mkdb}.in: Add support for G_CONST_RETURN.
	(Right now, it will appear as G_CONST_RETURN in the output -
	I'm not sure that's right - perhaps it should be converted
	to const.)

2001-02-20  Michael Meeks  <michael@ximian.com>

	* gtkdoc-mktmpl.in: s/TRUE/1/

2001-02-19  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mktmpl.in (UpdateTemplates): fixed bug handling the $changed
	flag.

2001-02-17  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-scan.in (ScanHeaders): 
	(ScanHeader): patch from Johannes Stezenbach <js@convergence.de>
	so we don't use '\b' in the regexp to match files/dirs to ignore.
	'\b' can match '_' so we matched things we shouldn't have.

Mon Feb 12 12:50:57 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Up version.

Sun Feb 11 18:35:07 2001  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-mktmpl.in: Add a timestamp file for the
	templates like sgml.stamp

	* gtkdoc-mktmpl.in (OutputUnusedTemplates): Write the
	symbols out in sorted order instead of hash table
	order to reduce conflicts.

Mon Feb  5 16:48:51 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in gtk-doc.dsl.in: Remove checks for DSSSL - use a
	public entity instead.

	* gtkdoc-scangobj.in: Fix to work with libtool better.

2001-01-30  Havoc Pennington  <hp@pobox.com>

	* gtkdoc-fixxref.in, gtkdoc-mkdb.in, gtkdoc-mktmpl.in,
	gtkdoc-scan.in, gtkdoc-scangobj.in, gtkdoc-scanobj.in:	
	Added -*- cperl -*- magic, and --deprecated-guards
	option.

2001-01-23  Damon Chaplin  <damon@helixcode.com>

	* gtkdoc-scangobj.in: 
	* gtkdoc-scanobj.in: 
	* gtkdoc-scan.in: 
	* gtkdoc-mkdb.in: 
	* gtkdoc-mktmpl.in: changed so that they only update files when
	necessary (they write new versions of the files out, then use 'cmp'
	to compare with the existing versions to see if they have changed.)
	This should make it easier to do proper dependency rules in Makefiles,
	and it may cut down on CVS traffic.
