@@ -1,3 +1,8 @@
+Tue Mar  6 23:21:46 2001  Jonathan Blandford  <jrb@redhat.com>
+
+	* gtkdoc-scanobj.in: Add gobject support.  Now works on files that
+	don't link against GTK.
+
 Sat Mar  3 17:43:42 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* gtkdoc-{scan,mktmpl,mkdb}.in: Add support for G_CONST_RETURN.
